2003-07-10  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3161102>: Avoid retain cycles by destroying plug-ins in the page cache before dealloc
	Fixed: <rdar://problem/3320624>: WebElementImageAltStringKey is not exported :-(
	Unspoof freebsd since we now handle gzip'd content.

        Reviewed by rjw.

        * History.subproj/WebHistoryItem.m:
        (+[WebHistoryItem _destroyAllPluginsInPendingPageCaches]): new, destroys all plug-ins
        (+[WebHistoryItem _releaseAllPendingPageCaches]): call _destroyAllPluginsInPendingPageCaches
        * WebKit.exp: export WebElementImageAltStringKey
        * WebView.subproj/WebUserAgentSpoofTable.c: unspoof freebsd
        (hash):
        (_web_findSpoofTableEntry):
        * WebView.subproj/WebUserAgentSpoofTable.gperf: unspoof freebsd

2003-07-10  John Sullivan  <sullivan@apple.com>

        Reviewed by Chris

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer incrementalLoadWithBytes:length:complete:]):
	fixed copy/paste error in comment that I stumbled across

2003-07-09  Richard Williamson   <rjw@apple.com>

	Fixed 3141257.  Animate multiple copies of the same
	image on the same page.

        Reviewed by hyatt.

        * WebCoreSupport.subproj/WebImageRenderer.h:
        * WebCoreSupport.subproj/WebImageRenderer.m:
        (+[WebImageRenderer stopAnimationsInView:]):
        (-[WebImageRenderer retainOrCopyIfNeeded]):
        (-[WebImageRenderer copyWithZone:]):
        (-[WebImageRenderer incrementalLoadWithBytes:length:complete:]):
        (-[WebImageRenderer dealloc]):
        (-[WebImageRenderer repetitionCount]):
        (-[WebImageRenderer scheduleFrame]):
        (-[WebImageRenderer beginAnimationInRect:fromRect:]):
        * WebCoreSupport.subproj/WebImageRendererFactory.h:
        * WebCoreSupport.subproj/WebImageRendererFactory.m:
        (-[WebImageRendererFactory imageRendererWithMIMEType:]):